# Eurobot2026MTP

./: .gitignore  MERGE_NOTES.md  README.md  calibrate_camera.sh  ninja_align_status.json  ninja_crate_detection.json  run_bot.sh  run_sim.sh
config/: zed_left_camera.yaml  zed_right_camera.yaml  zed_stereo.yaml  zed_stereo_pairs_used.json
network/: ros_dlink_env.sh  ros_local_env.sh  ros_tailscale_env.sh  ssh_config
report_outputs/: main_bot_cluster_target_20260526_134230.json  main_bot_cluster_target_20260526_134510.json  main_bot_cluster_target_20260526_134808.json  main_bot_cluster_target_20260526_135001.json  main_bot_cluster_target_20260526_135218.json  main_bot_target_20260526_134230.json  main_bot_target_20260526_134510.json  main_bot_target_20260526_134808.json  main_bot_target_20260526_135001.json  main_bot_target_20260526_135218.json  ninja_fridge_target_20260526_134230.json  ninja_fridge_target_20260526_134510.json  ninja_fridge_target_20260526_134808.json  ninja_fridge_target_20260526_135001.json  ninja_fridge_target_20260526_135218.json  ninja_pose_20260526_131748.txt  ninja_pose_20260526_132807.txt  ninja_pose_20260526_132854.txt  ninja_pose_20260526_133140.txt  ninja_pose_20260526_133543.txt  ninja_pose_20260526_133839.txt  ninja_pose_20260526_134230.txt  ninja_pose_20260526_134510.txt  ninja_pose_20260526_134808.txt  ninja_pose_20260526_135001.txt  ninja_pose_20260526_135218.txt  opponent_robots_20260526_131748.json  opponent_robots_20260526_132807.json  opponent_robots_20260526_132854.json  opponent_robots_20260526_133140.json  opponent_robots_20260526_133543.json  opponent_robots_20260526_133839.json  opponent_robots_20260526_134230.json  opponent_robots_20260526_134510.json  opponent_robots_20260526_134808.json  opponent_robots_20260526_135001.json  overhead_crates_20260526_132807.csv  overhead_crates_20260526_133140.csv  overhead_crates_20260526_133543.csv  (+27 more)
scripts/: bringup_ninja.sh  (+15 more)
src/main_bot_control/: package.xml  setup.cfg  setup.py
src/main_bot_control/config/: pose_fuser.yaml
src/main_bot_control/launch/: zed_camera.launch.py
src/main_bot_control/main_bot_control/: actuator_bridge.py  aruco_detect.py  ground_truth_pose.py  opencr_bridge_sim.py  pose_compare.py  pose_fuser.py  pose_fuser_sim.py  pose_logger.py  stereo_capture.py  stereo_rectify.py  tag_localization.py  tag_registry.py  telemetry_console.py  zed_left_splitter.py
src/main_bot_control/main_bot_control/config/: control_tuning.yaml  dustpan_config.yaml  tags.yaml
src/main_bot_sim/: CMakeLists.txt  package.xml
src/main_bot_sim/launch/: sim.launch.py
src/main_bot_sim/worlds/: building_robot.sdf
src/sondre_bot_control/: package.xml  setup.cfg  setup.py
src/sondre_bot_control/launch/: zed_camera.launch.py
src/sondre_bot_control/sondre_bot_control/: aruco_detect.py  drive_mode_mux.py  ground_truth_pose.py  mode_switch_gui.py  opencr_bridge.py  overhead_pose_sim.py  pose_fuser.py  rbpi_metrics.py  stereo_calibrate.py  stereo_capture.py  stereo_rectify.py  tag_localization.py  tag_registry.py  telemetry_console.py  vision_drive.py  zed_left_splitter.py
src/sondre_bot_control/sondre_bot_control/config/: camera_controls.yaml  dustpan_config.yaml  tags.yaml  v4l2_camera.yaml
src/sondre_bot_sim/: CMakeLists.txt  package.xml
src/sondre_bot_sim/config/: apriltag.yaml  bridge.yaml
src/sondre_bot_sim/launch/: sim.launch.py
src/sondre_bot_sim/worlds/: building_robot.sdf
(+65 files in other folders)
