<?xml version="1.0"?>
<package format="3">
  <name>main_bot_control</name>
  <version>0.0.1</version>
  <description>ROS 2 camera-based driving logic for the Eurobot main robot.</description>
  <maintainer email="your_email@example.com">Sondre</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_msgs</depend>
  <depend>nav_msgs</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>