<?xml version="1.0"?>
<package format="3">
  <name>sondre_bot_sim</name>
  <version>0.0.0</version>
  <description>Simulation package for Sondre Bot</description>

  <maintainer email="sondre@todo.todo">sondre</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>stereo_image_proc</exec_depend>
  <exec_depend>sondre_bot_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>